--- a/s-tracker.html
+++ b/s-tracker.html
@@ -5,6 +5,11 @@
 <body>
   <h1>Welcome to Skills Tracker!</h1>
 
+  <form class="add-skill">
+    <input type="text" name="name" placeholder="Skill name">
+    <input type="submit" value="Create skill">
+  </form>
+
   {{#each skills}}
     {{> skill}}
   {{/each}}
