--- a/s-tracker.html
+++ b/s-tracker.html
@@ -16,5 +16,5 @@
 </body>
 
 <template name="skill">
-  <li>{{name}} - <span>{{score}}</span></li>
+  <li>{{name}} - <span class='increment-score'>{{score}}</span></li>
 </template>
