--- a/s-tracker.html
+++ b/s-tracker.html
@@ -3,7 +3,10 @@
 </head>
 
 <body>
-  <h1>Welcome to Skills Tracker!</h1>
+  <header>
+    <h1>Welcome to Skills Tracker!</h1>
+    {{> loginButtons}}
+  </header>
 
   <form class="add-skill">
     <input type="text" name="name" placeholder="Skill name">
