Add username and owner to Skill

--- a/s-tracker.html
+++ b/s-tracker.html
@@ -19,5 +19,5 @@
 </body>
 
 <template name="skill">
-  <li>{{name}} - <span class='increment-score'>{{score}}</span></li>
+  <li>{{name}} - <span class='increment-score'>{{score}}</span> - <span class="username">{{username}}</span></li>
 </template>
